# practice-maxbot

./: .dockerignore  .env-example  .gitignore  README.md  TODO.md  bot_handlers.py  chatparser.py  config.py  data.npz  data_loader.py  data_ml.xlsx  docker-compose.yml  embeddings.py  main.py  ml_bot_test.py  ml_test.py  model.pkl  model_manager.py  prediction.py  pyproject.toml  requirements.txt  sample_data.xlsx  test.py
apps/api/: Dockerfile
apps/api/api/: app.py  cache.py
apps/ml_worker/: Dockerfile
apps/ml_worker/ml_worker/: model_loader.py  prediction.py  worker.py
apps/telegram_bot/: Dockerfile
apps/telegram_bot/telegram_bot/: handlers.py  main.py
components/bot/: bot_handlers.py
components/data/: embeddings_handler.py  excel_handler.py  prepare_data.py
components/model/: model_load.py  model_train.py
components/utils/: __init__.py  response_formatter.py
data/models/: useful.pkl
frontend/: index.html
frontend_charts/: Dockerfile  README.md  package-lock.json  package.json
frontend_charts/src/: App.css  App.js
frontend_charts/src/components/: Dashboard.css  Dashboard.js  MyChart.js  ParseData.js  PieChart.js
server/: .gitignore  app.py  requirements.txt
training/: train.py
training/data/: embeddings_handler.py  excel_handler.py  prepare_data.py  safe_loader.py
training/model/: model_train.py
utils/: __init__.py
