[project]
name = "practice-maxbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Faspeice",email = "154542847+Faspeice@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot (>=22.8,<23.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "joblib (>=1.5.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
