[tool.poetry]
name = "practice-maxbot"
version = "0.1.0"
description = ""
authors = ["Faspeice <154542847+Faspeice@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^22.8"
python-dotenv = "^1.2.2"
pandas = "^3.0.3"
sentence-transformers = "^5.6.0"
scikit-learn = "^1.9.0"
openpyxl = "^3.1.5"
joblib = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"